--- a/.gitignore
+++ b/.gitignore
@@ -1689,3 +1689,7 @@ Temp/UnityTempFile-e24ec8640ec7df341afc706d8e328b48
 Temp/UnityTempFile-e84ec81f018976844be134f6f37b519f
 Temp/UnityTempFile-fb1dbcec7c3ba32408a47921605485cf
 Temp/UnityTempFile-ff3dba2aaef3cdf41a78d4d11c08f0ce
+Temp/UnityTempFile-ee417c8bc658bc940b9f5690006ca3ed
+Temp/UnityTempFile-82b51379a2e7b614d94f26d6137c1a43
+Temp/UnityTempFile-543d5bfa8b1b8014687c2d1fe4a3ed17
+Temp/UnityTempFile-3d2868c4d6399894fae803b5cd680b43
